can't do iteration 2 .

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,14 @@
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 		<link rel="stylesheet" href="stylesheets/style.css" />
 		<script type="module" src="javascript/index.js"></script>
+		
 
 		<title>IH Characters</title>
 	</head>
 	<body>
 		<section class="container">
 			<h1>Ironhack Characters API</h1>
+			
 			<div class="characters-container">
 				<div class="character-info">
 					<div class="character-id">Character Id</div>
@@ -22,15 +24,18 @@
 					<div class="weapon">Character Weapon</div>
 				</div>
 			</div>
+
 			<section class="operations">
 				<div class="operation">
 					<button id="fetch-all">Fetch all</button>
 				</div>
+
 				<div class="operation">
 					<label for="character-id">Search by name: </label>
 					<input type="text" name="character-name" />
 					<button id="fetch-one">Fetch one</button>
 				</div>
+
 				<div class="operation delete">
 					<label for="character-id-delete">Delete by ID: </label>
 					<input type="text" name="character-id-delete" />
@@ -38,29 +43,31 @@
 				</div>
 			</section>
 		</section>
+
 		<section class="container">
 			<section class="form-container">
 				<h2>New Character</h2>
 				<form id="new-character-form" class="character-form">
 					<div class="field">
 						<label for="name">Name: </label>
-						<input type="text" name="name" />
+						<input type="text" name="name" id="name" />
 					</div>
 					<div class="field">
 						<label for="occupation">Occupation: </label>
-						<input type="text" name="occupation" />
+						<input type="text" name="occupation" id="occupation"/>
 					</div>
 					<div class="field">
 						<label for="weapon">Weapon: </label>
-						<input type="text" name="weapon" />
+						<input type="text" name="weapon" id="weapon"/>
 					</div>
 					<div class="field">
 						<label for="cartoon">Is a Cartoon: </label>
-						<input name="cartoon" type="checkbox" />
+						<input name="cartoon" type="checkbox" id="cartoon"/>
 					</div>
-					<button id="send-data">Create</button>
+					<button id="send-data" class="create-button">Create</button>
 				</form>
 			</section>
+
 			<section class="form-container">
 				<h2>Edit Character</h2>
 				<form id="edit-character-form" class="character-form">
@@ -84,10 +91,11 @@
 						<label for="cartoon">Is a Cartoon: </label>
 						<input name="cartoon" type="checkbox" />
 					</div>
-					<button id="send-data">Update</button>
+					<button id="send-data" class="edit-button">Update</button>
 				</form>
 			</section>
 		</section>
+
 		<!-- Template to create characters -->
 		<template id="template">
 			<div class="character-info">
